# clox

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: styling.yml
grammar/: lox
src/: chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.cpp  debug.h  main.c  main.cpp  memory.c  memory.cpp  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.cpp  value.h  vm.c  vm.h
tests/: README.md
tests/bool/: equality.lox  not.lox
tests/print/: missing_argument.lox
tests/scanning/: identifiers.lox
